@@ -13,18 +13,37 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <build>
 
-    <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>3.0.0-M9</version>
-    <configuration>
-        <argLine>
-            --add-opens java.base/sun.misc=ALL-UNNAMED
-            --add-opens java.base/java.nio=ALL-UNNAMED
-        </argLine>
-    </configuration>
-</plugin>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M9</version>
+            <configuration>
+                <argLine>
+                    --add-opens=java.base/java.nio=ALL-UNNAMED
+                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                    -XX:+IgnoreUnrecognizedVMOptions
+                    --illegal-access=permit
+                </argLine>
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <jvmArguments>
+                    --add-opens=java.base/java.nio=ALL-UNNAMED
+                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                    -XX:+IgnoreUnrecognizedVMOptions
+                </jvmArguments>
+            </configuration>
+        </plugin>
+    </plugins>
+    </build>
+
 
     <dependencies>
         <dependency>
@@ -47,6 +66,18 @@
             <artifactId>jackson-dataformat-msgpack</artifactId>
             <version>0.9.10</version>
         </dependency>
+        <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.9.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.1.1</version>
+        <scope>test</scope>
+    </dependency>
 
         <!-- MessagePack support -->
     </dependencies>
